photos updated contact info added

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			</ul>
 			</li>-->
 					<li>
-						<a href="index.html">Contact</a>
+						<a href="#Contact">Contact</a>
 					</li>
 				</ul>
 			</nav>
@@ -104,7 +104,7 @@
 		<div class="row">
 			<div class="twelve columns">
 				<p class="text-center">
-					Rufen Sie uns an: 01774479511
+					Rufen Sie uns an: 0 177 4479511
 				</p>
 			</div>
 		</div>
@@ -345,6 +345,7 @@
 	<div class="row">
 		<!-- GOOGLE MAP IFRAME -->
 		<div class="twelve columns">
+			
 			<div class="mapouter">
 				<div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
 						src="https://maps.google.com/maps?q=bonnStra%C3%9Fe%20150%20br%C3%BChl&t=&z=13&ie=UTF8&iwloc=&output=embed"
@@ -368,6 +369,8 @@
 				</div>
 			</div>
 		</div>
+		<div class="twelve columns">
+		</div>
 	</div>
 
 	<!-- FOOOTER 
@@ -380,7 +383,7 @@
 			<!-- <div class="four columns">
 		<h1>ABOUT US</h1>
 		 Our goal is to keep clients satisfied!
-	</div> -->
+		</div> -->
 			<div class="four columns">
 				<a class="social facebook" href="#"></a>
 				<a class="social twitter" href="#"></a>
@@ -388,17 +391,22 @@
 				<a class="social flickr" href="#"></a>
 				<a class="social dribbble" href="#"></a>
 			</div>
-			<!-- <div class="four columns">
-		<h1 class="newsmargin">NEWSLETTER</h1>
-		<div class="row collapse newsletter floatright">
+			 <div class="four columns">
+				 <a id="Contact">
+		<h1 class="newsmargin" style="color: red;">Fix-Gebäude-Service</h1>
+		<h1 class="newsmargin">Bonnstraße 150 50321, Brühl</h1>
+		<h1 class="newsmargin">E-Mail: fix.service@gmx.de</h1>
+		<h1 class="newsmargin">Tel: 0 177 4479511</h1>
+				</a>
+		<!--<div class="row collapse newsletter floatright">
 			<div class="ten mobile-three columns">
 				<input type="text" class="nomargin" placeholder="Enter your e-mail address...">
 			</div>
 			<div class="two mobile-one columns">
 				<a href="#" class="postfix button expand">GO</a>
 			</div>
-		</div>
-	</div> -->
+		</div>-->
+		</div> 
 		</footer>
 	</div>
 	<div class="copyright">
