--- a/index.html
+++ b/index.html
@@ -346,28 +346,8 @@
 		<!-- GOOGLE MAP IFRAME -->
 		<div class="twelve columns">
 			
-			<div class="mapouter">
-				<div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
-						src="https://maps.google.com/maps?q=bonnStra%C3%9Fe%20150%20br%C3%BChl&t=&z=13&ie=UTF8&iwloc=&output=embed"
-						frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br>
-					<style>
-						.mapouter {
-							position: relative;
-							text-align: right;
-							height: 500px;
-							width: 600px;
-						}
-					</style><a href="https://www.embedgooglemap.net">responsive google map embed</a>
-					<style>
-						.gmap_canvas {
-							overflow: hidden;
-							background: none !important;
-							height: 500px;
-							width: 600px;
-						}
-					</style>
-				</div>
-			</div>
+				<iframe class="gmap"
+						src="https://maps.google.com/maps?q=bonnStra%C3%9Fe%20150%20br%C3%BChl&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
 		</div>
 		<div class="twelve columns">
 		</div>
