datenschutz impressum added

--- a/index.html
+++ b/index.html
@@ -393,6 +393,10 @@
 		<div class="row">
 			<div class="six columns">
 				&copy;<span class="small"> Copyright FIX-Gebäude-Service</span>
+				<span class="small"> |</span>
+				<span class="small"> <a target="_blank"
+					href="datenschutz.html">Datenschutz & Impressum</a></span>
+				<span class="small"> |</span>
 			</div>
 			<div class="six columns">
 				<span class="small floatright">Design by <a target="_blank"
