--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 						</span>
 						<div class="ca-content">
 							<h2 class="ca-main"></h2>
-							<h3 class="ca-sub">Baustellenendreinigung</h3>
+							<h3 class="ca-sub">Entrümpelung</h3>
 						</div>
 					</a>
 				</li>
@@ -346,8 +346,7 @@
 		<!-- GOOGLE MAP IFRAME -->
 		<div class="twelve columns">
 			
-				<iframe class="gmap"
-						src="https://maps.google.com/maps?q=bonnStra%C3%9Fe%20150%20br%C3%BChl&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2520.56010420288!2d6.8921182767697635!3d50.82078846062954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bf2297343d2859%3A0x9ce9e98e6d17d9e7!2sEichendorffstra%C3%9Fe%203%2C%2050321%20Br%C3%BChl!5e0!3m2!1str!2sde!4v1770843490266!5m2!1str!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 		<div class="twelve columns">
 		</div>
@@ -374,7 +373,7 @@
 			 <div class="four columns">
 				 <a id="Contact">
 		<h1 class="newsmargin" style="color: red;">Fix-Gebäude-Service</h1>
-		<h1 class="newsmargin">Bonnstraße 150 50321, Brühl</h1>
+		<h1 class="newsmargin">Eichendorffstraße 3 50321, Brühl</h1>
 		<h1 class="newsmargin">E-Mail: fix.service@gmx.de</h1>
 		<h1 class="newsmargin">Tel: 0 177 4479511</h1>
 				</a>
